# predictive-maintenance-mlops

./: Dockerfile.api  Dockerfile.pipeline  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: __init__.py  dependencies.py  main.py  schemas.py
configs/: main_config.yaml  prometheus.yml
monitoring/grafana/dashboards/: fastapi_metrics.json  pdm_overview.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
notebooks/: orchestration.ipynb
outputs/: feature_columns.json  model_pipeline.joblib
outputs/metrics/: training_summary.json
outputs/mlflow_artifacts/251593578087881013/: meta.yaml
outputs/mlflow_artifacts/251593578087881013/11fb8986c67c4432a4afa8040b3b407a/: meta.yaml
outputs/mlflow_artifacts/251593578087881013/1606b49ec1d242c986a834d80aeb1368/: meta.yaml
outputs/mlflow_artifacts/251593578087881013/193c561ead174028ad2e25a896a7c735/: meta.yaml
outputs/mlflow_artifacts/251593578087881013/23b2984867f44054a567b69641177d5f/: meta.yaml
outputs/mlflow_artifacts/251593578087881013/2e02640ccc4a46aca8c5d3801946fb09/: meta.yaml
outputs/mlflow_artifacts/251593578087881013/470a7f2d480c4aaa8faa213f999a1376/: meta.yaml
outputs/mlflow_artifacts/251593578087881013/7816e6e78e8e49999f4de7efd1d25ff8/: meta.yaml
outputs/mlruns/0/: meta.yaml
outputs/mlruns/130492960859859612/: meta.yaml
outputs/predictions/: maintenance_report.csv
src/: __init__.py  config.py  data_processing.py  feature_engineering.py  inference.py  pipeline.py  training.py
tests/: __init__.py  test_api.py  test_data.py  test_model.py
(+373 files in other folders)
